--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>Nicolas Kurtovic</strong>, <br />
+					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
 				</div>
 			</header>
 
@@ -461,3 +460,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
