--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nicolas Kurtovic</title>
+		<title>Nico Kurtovic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Nicolas Kurtovic</strong>, <br />
+					<h1><strong>Nicolas Kurtovic</strong> <br />
 					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
 				</div>
 			</header>
@@ -28,10 +28,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Planets and Planet formation</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am Nicolas Kurtovic, a postdoctoral researcher at the Max Planck Institute for Extraterrestrial Physic. My main interest is the formation of planets around young stellar objects, particularly around binaries and very low mass stars.</p><br />
+						<p>My favorite instrument is ALMA, which traces the cold dust and gas from where the planets are forming and growing, but I like learning how to use different telescopes, and bringing all of them together to understand the processes influencing the formation of planets. Check my latest works! I have been using ALMA, JWST, and many other telescopes to study the most common stars in our galaxy.  </p><br />
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -460,4 +460,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
