--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 							<h2>Planets and Planet formation</h2>
 						</header>
 						<p>I am Nicolas Kurtovic, a postdoctoral researcher at the Max Planck Institute for Extraterrestrial Physic. My main interest is the formation of planets around young stellar objects, especially around binaries and very low mass stars!</p>
-<!-- 						<p>My favorite telescope is ALMA, which traces the cold dust and gas from where the planets are forming and growing. I am also interested in learning how to use any telescope that can help me understand the formation of planets. Check my latest works! I have been using ALMA, JWST, and many other telescopes to study the most common stars in our galaxy.  </p><br />
-						<ul class="actions">
+ 						<p>My favorite telescope is ALMA, which traces the cold dust and gas from where the planets are forming and growing. I am also interested in learning how to use any telescope that can help me understand the formation of planets. Check my latest works! I have been using ALMA, JWST, and many other telescopes to study the most common stars in our galaxy.  </p><br />
+<!--						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
 					</section>
@@ -460,6 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
