--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Highlights from my work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/htlup.png" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/htlup.png" class="image fit thumb"><img src="images/htlup.png" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
@@ -460,6 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
