--- a/index.html
+++ b/index.html
@@ -43,23 +43,27 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/rwaur.png" class="image fit thumb"><img src="images/rwaur.png" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>The RW Aur binaries interacted a few hundred years ago</h3>
+								<p>Extremely precise astrometry measurements made with ALMA observations, and historical multiwavelength observations, have allowed the determination of RWAur B orbit around A. The periastron of the orbit is comparable to the extension of their gas disks, which indicates the systems collided a few hundred years ago.</p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...692A.155K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/cscha.png" class="image fit thumb"><img src="images/cscha.png" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Planet formation in a circumbinary system</h3>
+								<p>The disk around the binary CS Cha shows a very small eccentricity, which we measured by modeling the interferometric visibilities. Through hydro simulations, I demonstrate that the binaries cannot explain the disk morphology, and a Saturn-like planet orbiting at the edge of the cavity is more consistent with the observations.</p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2022A%26A...664A.151K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/vlms.png" class="image fit thumb"><img src="images/vlms.png" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Very Low Mass Stars show evidence of planet formation</h3>
+								<p>I studied six disks around Very Low Mass Stars in Taurus. The sample shows evidence of strong dust radial drift, as high ratios between the gas and dust extent are detected. I also found dust substructures in all the disks that are well resolved by our resolution of 0.1''. The results suggest that substructure detection is limited by resolution and sensitivity, even in VLMS.</p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2021A%26A...645A.139K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/htlup.png" class="image fit thumb"><img src="images/htlup.png" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Dust substructures in Multiple Disk Systems (DSHARP IV)</h3>
+								<p>Tidal interactions between stars-disks in multiple stellar systems can interfere with planet formation processes. I studied the dust substructures in the multiple stellar systems HT Lup and AS 205 and found: the first dust spirals in a binary system, truncated disks, fly-by interactions, and disk misalignments. </p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...869L..44K/abstract">ADS</a> </p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -412,6 +416,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
