Update profile picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/profile_pic_ntk.png" alt="" /></a>
 					<h1><strong>Nicolas Kurtovic</strong> <br />
 					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
 				</div>
@@ -416,6 +416,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
