--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Nicolas Kurtovic</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Nicolas Kurtovic</li><li>webpage design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div> 
 			</footer>
@@ -416,6 +416,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
