--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nico Kurtovic</title>
+		<title>Nicolas Kurtovic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,10 +28,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Planets and Planet formation</h2>
+							<h2>Research</h2>
 						</header>
-						<p>I am Nicolas Kurtovic, a postdoctoral researcher at the Max Planck Institute for Extraterrestrial Physic. My main interest is the formation of planets around young stellar objects, especially around binaries and very low mass stars!</p>
- 						<p>My favorite telescope is ALMA, which traces the cold dust and gas from where the planets are forming and growing. I am also interested in learning how to use any telescope that can help me understand the formation of planets. Check my latest works! I have been using ALMA, JWST, and many other facilities to study the most common stars in our galaxy.  </p><br />
+						<p>My main scientific goal is to understand the conditions for planet formation around the most common type of systems in our galaxy: Multiple stellar systes (binaries) and Very Low Mass Stars. I study these objects using ALMA, JWST, VLT, among others. </p><br />
 <!--						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
@@ -39,13 +38,37 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Highlights from my work</h2>
+						<h2>My publications as first author</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/rwaur_jwst-alma.png" class="image fit thumb"><img src="images/rwaur_jwst-alma.png" alt="" /></a>
+								<h3>The impact of external companions in the inner disk composition.</h3>
+								<p>Observations from the MINDS collaboration, with the JWST/MIRI-MRS instrument, allowed us to explore how the dynamical interactions could influence the inner disk composition. We found evidence of bright jets, variable water emission, among some other interesting results. .</p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/agepro-im.png" class="image fit thumb"><img src="images/agepro-im.png" alt="" /></a>
+								<h3>The evolution of dust emission is consistent with the presence of dust traps.</h3>
+								<p>As part of the ALMA Large Program AGE-PRO, I explored which properties of the AGE-PRO sample could be explained purely with viscous evolution. The dust evolution across different star-forming regions is consistent with a population of disks with at least weak dust traps. </p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...989....6K/abstract">ADS</a> </p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/rwaur.png" class="image fit thumb"><img src="images/rwaur.png" alt="" /></a>
 								<h3>The RW Aur binaries interacted a few hundred years ago</h3>
 								<p>Extremely precise astrometry measurements made with ALMA observations, and historical multiwavelength observations, have allowed the determination of RWAur B orbit around A. The periastron of the orbit is comparable to the extension of their gas disks, which indicates the systems collided a few hundred years ago.</p>
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...692A.155K/abstract">ADS</a> </p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/rwaur.png" class="image fit thumb"><img src="images/rwaur.png" alt="" /></a>
+								<h3>The temperature structure of a VLMS disk</h3>
+								<p>VLMS disks are cold and compact, challenging standard analysis tools. By analyzing the gas emission directly in the visibility plane, we got robust constraints on the disk height and temperature structure. </p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...687A.188K/abstract">ADS</a> </p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/simio-im.png" class="image fit thumb"><img src="images/simio-im.png" alt="" /></a>
+								<h3>Connecting simulations to observations</h3>
+								<p>Generating synthetic observations has never been easier. The SIMIO package is an extension for the CASA software, wrapping multiple functions to help with the comparison of simulations with real observations. This package works as a complement to the capabilities of simobserve. </p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2024JOSS....9.4942K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/cscha.png" class="image fit thumb"><img src="images/cscha.png" alt="" /></a>
@@ -416,6 +439,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
