--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...692A.155K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/rwaur.png" class="image fit thumb"><img src="images/rwaur.png" alt="" /></a>
+								<a href="images/mho6-cont-im.png" class="image fit thumb"><img src="images/mho6-cont-im.png" alt="" /></a>
 								<h3>The temperature structure of a VLMS disk</h3>
 								<p>VLMS disks are cold and compact, challenging standard analysis tools. By analyzing the gas emission directly in the visibility plane, we got robust constraints on the disk height and temperature structure. </p>
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...687A.188K/abstract">ADS</a> </p>
@@ -439,6 +439,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
