--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nico Kurtovic</title>
+		<title>Nicolas Kurtovic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,6 +19,12 @@
 					<a href="#" class="image avatar"><img src="images/profile_pic_ntk.png" alt="" /></a>
 					<h1><strong>Nicolas Kurtovic</strong> <br />
 					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
+					<nav id="nav">
+					  <ul>
+					    <li><a href="/index.html">Home</a></li>
+					    <li><a href="/projects.html">My Publications</a></li>
+					  </ul>
+					</nav>
 				</div>
 			</header>
 
@@ -416,6 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
