--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,12 @@
 					<a href="#" class="image avatar"><img src="images/profile_pic_ntk.png" alt="" /></a>
 					<h1><strong>Nicolas Kurtovic</strong> <br />
 					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
+					<nav id="nav">
+					  <ul>
+					    <li><a href="/index.html">Home</a></li>
+					    <li><a href="/projects.html">My Publications</a></li>
+					  </ul>
+					</nav>
 				</div>
 			</header>
 
@@ -439,6 +445,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
