--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/dmost-square-im.png" class="image fit thumb"><img src="images/dmost-square-im.png" alt="" /></a>
 								<h3>An ALMA Large Program to observe <strong>Very Low Mass Stars!</strong></h3>
-								<p>Very Low Mass Stars are the most common stellar population in our Galaxy. During ALMA Cycle 12, we got awarded 15 hours of ALMA to study the structure of disks around Very Low Mass Stars, and learn about the conditions for planet formation around these objects.</p>
+								<p>Very Low Mass Stars are the most common stellar population in our Galaxy. During ALMA Cycle 12, we got awarded 105 hours of ALMA to study the structure of disks around Very Low Mass Stars (2025.1.00324.L; PI: Kurtovic, Nicolas), and learn about the conditions for planet formation around these objects.</p>
 								<p>ALMA LP: <a href="https://almascience.eso.org/alma-data/lp">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -422,6 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
