--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header class="major">
 							<h2>Planets and Planet formation</h2>
 						</header>
-						<p>I am Nicolas Kurtovic, a postdoctoral researcher at the Max Planck Institute for Extraterrestrial Physic. My main interest is the formation of planets around young stellar objects, especially around binaries and very low mass stars!</p>
+						<p>I am Nicolas Kurtovic, a postdoctoral researcher at the Max Planck Institute for Astronomy (<a href="https://www.mpia.de/en">MPIA</a>). My main interest is the formation of planets around young stellar objects, especially around binaries and very low mass stars!</p>
  						<p>My favorite telescope is ALMA, which traces the cold dust and gas from where the planets are forming and growing. I am also interested in learning how to use any telescope that can help me understand the formation of planets. Check my latest works! I have been using ALMA, JWST, and many other facilities to study the most common stars in our galaxy.  </p><br />
 <!--						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -422,6 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
