--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Highlights from my work</h2>
+						<h2>Recent highlights</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/dmost-square-im.png" class="image fit thumb"><img src="images/dmost-square-im.png" alt="" /></a>
@@ -422,6 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
