--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/eso-gruber.png" class="image fit thumb"><img src="images/eso-gruber.png" alt="" /></a>
+								<h3>ESO-Gruber School</h3>
+								<p>As part of the SOC of the ESO-Gruber Summer School, lead by <a href="https://poonehnazari.github.io">Pooneh Nazari</a>, we prepared a 1-week summer school with lectures and practical sessions for a group of 20 astronomy students. I was also the instructor for a hands-on session with JWST/MIRI-MRS. Check for more information in the link below: </p>
+								<p>Link: <a href="https://www.eso.org/sci/meetings/2025/eso-gruber-summer-school--from-nearby-worlds-to-distant-galaxies.html">ESO-Gruber School</a> </p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/rwaur.png" class="image fit thumb"><img src="images/rwaur.png" alt="" /></a>
 								<h3>The RW Aur binaries interacted a few hundred years ago</h3>
 								<p>Extremely precise astrometry measurements made with ALMA observations, and historical multiwavelength observations, have allowed the determination of RWAur B orbit around A. The periastron of the orbit is comparable to the extension of their gas disks, which indicates the systems collided a few hundred years ago.</p>
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...692A.155K/abstract">ADS</a> </p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/vlms.png" class="image fit thumb"><img src="images/vlms.png" alt="" /></a>
-								<h3>Very Low Mass Stars show evidence of planet formation</h3>
-								<p>I studied six disks around Very Low Mass Stars in Taurus. The sample shows evidence of strong dust radial drift, as high ratios between the gas and dust extent are detected. I also found dust substructures in all the disks that are well resolved by our resolution of 0.1''. The results suggest that substructure detection is limited by resolution and sensitivity, even in VLMS.</p>
-								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2021A%26A...645A.139K/abstract">ADS</a> </p>
-							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://ui.adsabs.harvard.edu/user/libraries/umcgBfPeS8u5gVCB8oKs9w" class="button">Publication list in ADS</a></li>
+							<li><a href="https://ui.adsabs.harvard.edu/user/libraries/umcgBfPeS8u5gVCB8oKs9w" class="button">Full publication list in ADS</a></li>
 						</ul>
 					</section>
 
@@ -422,24 +422,3 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
