--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/eso-gruber.png" class="image fit thumb"><img src="images/eso-gruber.png" alt="" /></a>
+								<a href="images/cscha.png" class="image fit thumb"><img src="images/cscha.png" alt="" /></a>
 								<h3>ESO-Gruber School</h3>
 								<p>As part of the SOC of the ESO-Gruber Summer School, lead by <a href="https://poonehnazari.github.io">Pooneh Nazari</a>, we prepared a 1-week summer school with lectures and practical sessions for a group of 20 astronomy students. I was also the instructor for a hands-on session with JWST/MIRI-MRS. Check for more information in the link below: </p>
 								<p>Link: <a href="https://www.eso.org/sci/meetings/2025/eso-gruber-summer-school--from-nearby-worlds-to-distant-galaxies.html">ESO-Gruber School</a> </p>
@@ -422,3 +422,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
