--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 					<nav id="nav">
 					  <ul>
 					    <li><a href="/index.html">Home</a></li>
+					    <li><a href="/ntk_CV.pdf">CV</a></li>
 					    <li><a href="/projects.html">My Publications</a></li>
+					    <li><a href="/projects.html">Collaborations</a></li>
 					  </ul>
 					</nav>
 				</div>
@@ -422,4 +424,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
