--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+<meta name="description" content="Personal website of Nicolas Kurtovic, astrophysicist and researcher.">
+<meta name="keywords" content="ALMA, JWST, protoplanetary disks, astronomy, astrophysics, disks, planet formation, planets, GitHub Pages">
+<meta name="author" content="Nicolas Kurtovic">
+
 <html>
 	<head>
-		<title>Nicolas Kurtovic</title>
+		<title>Nicolas Kurtovic - Astronomer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,8 +22,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profile_pic_grey_ntk.png" alt="" /></a>
-					<h1><strong>Nicolas Kurtovic</strong> <br />
-					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
+					<h1><strong>Nicolas Kurtovic</strong></h1> <br />
+					<h2>Astronomer, Postdoctoral Researcher.</h2>
 					<nav id="nav">
 					  <ul>
 					    <li><a href="/index.html">Home</a></li>
@@ -423,6 +428,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
