--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 
-<meta name="description" content="Personal website of Nicolas Kurtovic, astrophysicist and researcher.">
-<meta name="keywords" content="ALMA, JWST, protoplanetary disks, astronomy, astrophysics, disks, planet formation, planets, GitHub Pages">
-<meta name="author" content="Nicolas Kurtovic">
 
 <html>
 	<head>
 		<title>Nicolas Kurtovic - Astronomer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="google-site-verification" content="A6fCeSCpNlKdQ0DDIIZnKjODEDViKMowkcWayy-tpV0" />
+		<meta name="description" content="Personal website of Nicolas Kurtovic, astrophysicist and researcher.">
+		<meta name="keywords" content="ALMA, JWST, protoplanetary disks, astronomy, astrophysics, disks, planet formation, planets, GitHub Pages">
+		<meta name="author" content="Nicolas Kurtovic">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -22,8 +23,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profile_pic_grey_ntk.png" alt="" /></a>
-					<h1><strong>Nicolas Kurtovic</strong></h1> <br />
-					<h2>Astronomer, Postdoctoral Researcher.</h2>
+					<h2><strong>Nicolas Kurtovic</strong></h2> <br />
+					<h1>Astronomer, Postdoctoral Researcher.</h1>
 					<nav id="nav">
 					  <ul>
 					    <li><a href="/index.html">Home</a></li>
@@ -428,6 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
