--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profile_pic_grey_ntk.png" alt="" /></a>
-					<h2><strong>Nicolas Kurtovic</strong></h2> <br />
+					<h2><strong>Nicolas Kurtovic</strong></h2>
 					<h1>Astronomer, Postdoctoral Researcher.</h1>
 					<nav id="nav">
 					  <ul>
@@ -429,6 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
