--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					</section>
 
 				<!-- Four -->
-
+<!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -402,7 +402,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 
 			</div>
-
+-->
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
@@ -413,7 +413,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Nicolas Kurtovic</li><li>webpage design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Nicolas Kurtovic</li><li>Webpage design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div> 
 			</footer>
@@ -428,6 +428,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
