--- a/collaborations.html
+++ b/collaborations.html
@@ -36,23 +36,25 @@
 
 				<!-- One -->
 					<section id="one">
-						<h2>Recent highlights</h2>
+						<h2>Large collaborations</h2>
 						<div class="row">
 							<article class="col-4 col-12-xsmall work-item">
 								<a href="images/dmost-square-im.png" class="image fit thumb"><img src="images/dmost-square-im.png" alt="" /></a>
-								<h3>An ALMA  <strong>Very Low Mass Stars!</strong></h3>
-								<p>Very Low .</p>
+								<h3>DMOST: Disks around the MOST common stars</h3>
+								<p>I am leading the ALMA Large Program DMOST (ID:2025.1.00324.L; PI: Kurtovic, Nicolas), which aims to study the disks of young very low mass stars. We will explore the conditions for planet formation around these objects.</p>
 								<p>List of <a href="https://almascience.eso.org/alma-data/lp">ALMA Large Programs.</a> </p>
 							</article>
 							<article class="col-4 col-12-xsmall work-item">
 								<a href="images/rwaur_jwst-alma.png" class="image fit thumb"><img src="images/rwaur_jwst-alma.png" alt="" /></a>
-								<h3>The impact.</h3>
-								<p>Observation.</p>
+								<h3>MINDS: MIRI mid-INfrared Disk Survey.</h3>
+								<p>As part of a guaranteed time observations program MINDS (GTO:1282; PI: Henning, Thomas), we observed tens of disks with JWST/MIRI-MRS. Check our <a href="https://minds.cab.inta-csic.es">webpage</a>, and my latest work with the binaries of MINDS.</p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-4 col-12-xsmall work-item">
 								<a href="images/rwaur_jwst-alma.png" class="image fit thumb"><img src="images/rwaur_jwst-alma.png" alt="" /></a>
-								<h3>Test.</h3>
-								<p>Observation.</p>
+								<h3>AGE-PRO: The ALMA Survey of Gas Evolution of PROtoplanetary Disks</h3>
+								<p>I am a member of the ALMA Large Program <a href="https://agepro.das.uchile.cl">AGE-PRO</a> (ID:2021.1.00128.L, PI: Zhang, Ke), where we explored the evolution of disk properties with a sample spanning three star forming regions. Check my paper analyzing the evolution of the dust emission. I also have a follow-up program with ALMA!</p>
+								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...989....6K/abstract">ADS</a> </p>
 							</article>
 						</div>
 					</section>
@@ -79,6 +81,7 @@
 
 	</body>
 </html>
+
 
 
 
