--- a/collaborations.html
+++ b/collaborations.html
@@ -45,7 +45,7 @@
 								<p>List of <a href="https://almascience.eso.org/alma-data/lp">ALMA Large Programs.</a> </p>
 							</article>
 							<article class="col-4 col-12-xsmall work-item">
-								<a href="images/minds-logo.png" class="image fit thumb"><img src="images/minds-logo.png" alt="" /></a>
+								<a href="images/minds-logo.jpg" class="image fit thumb"><img src="images/minds-logo.jpg" alt="" /></a>
 								<h3>MINDS: MIRI mid-INfrared Disk Survey.</h3>
 								<p>As part of a guaranteed time observations program MINDS (GTO:1282; PI: Henning, Thomas), we observed tens of disks with JWST/MIRI-MRS. Check our <a href="https://minds.cab.inta-csic.es">webpage</a>, and my latest work with the binaries of MINDS.</p>
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
@@ -81,6 +81,7 @@
 
 	</body>
 </html>
+
 
 
 
