--- a/collaborations.html
+++ b/collaborations.html
@@ -47,14 +47,14 @@
 							<article class="col-4 col-12-xsmall work-item">
 								<a href="images/minds-logo.jpg" class="image fit thumb"><img src="images/minds-logo.jpg" alt="" /></a>
 								<h3>MINDS: MIRI mid-INfrared Disk Survey.</h3>
-								<p>As part of a guaranteed time observations program MINDS (GTO:1282; PI: Henning, Thomas), we observed tens of disks with JWST/MIRI-MRS. Check our <a href="https://minds.cab.inta-csic.es">webpage</a>, and my latest work with the binaries of MINDS.</p>
-								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
+								<p>As part of a guaranteed time observations program <a href="https://minds.cab.inta-csic.es">MINDS</a> (GTO:1282; PI: Henning, Thomas), we observed tens of disks with JWST/MIRI-MRS to study the emission of their inner disks. My latest work as part of MINDS was studying the emission of the binary systems. </p>
+								<p>MINDS Binaries: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
 							</article>
 							<article class="col-4 col-12-xsmall work-item">
 								<a href="images/agepro-logo.png" class="image fit thumb"><img src="images/agepro-logo.png" alt="" /></a>
 								<h3>AGE-PRO: The ALMA Survey of Gas Evolution of PROtoplanetary Disks</h3>
 								<p>I am a member of the ALMA Large Program <a href="https://agepro.das.uchile.cl">AGE-PRO</a> (ID:2021.1.00128.L, PI: Zhang, Ke), where we explored the evolution of disk properties with a sample spanning three star forming regions. Check my paper analyzing the evolution of the dust emission. I also have a follow-up program with ALMA!</p>
-								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...989....6K/abstract">ADS</a> </p>
+								<p>AGE-PRO dust evolution: <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...989....6K/abstract">ADS</a> </p>
 							</article>
 						</div>
 					</section>
@@ -81,6 +81,7 @@
 
 	</body>
 </html>
+
 
 
 
