--- a/collaborations.html
+++ b/collaborations.html
@@ -58,7 +58,7 @@
 							</article>
 						</div>
 					</section>
-
+			</div>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
@@ -81,6 +81,7 @@
 
 	</body>
 </html>
+
 
 
 
