--- a/collaborations.html
+++ b/collaborations.html
@@ -41,7 +41,7 @@
 							<article class="col-4 col-12-xsmall work-item">
 								<a href="images/dmost-square-im.png" class="image fit thumb"><img src="images/dmost-square-im.png" alt="" /></a>
 								<h3>DMOST: Disks around the MOST common stars</h3>
-								<p>I am leading the ALMA Large Program DMOST (ID:2025.1.00324.L; PI: Kurtovic, Nicolas), which aims to study the disks of young very low mass stars. We will explore the conditions for planet formation around these objects.</p>
+								<p>I am leading the ALMA Large Program <a href="https://alma-dmost.github.io">DMOST</a> (ID:2025.1.00324.L; PI: Kurtovic, Nicolas), which aims to study the disks of young very low mass stars. We will explore the conditions for planet formation around these objects.</p>
 								<p>List of <a href="https://almascience.eso.org/alma-data/lp">ALMA Large Programs.</a> </p>
 							</article>
 							<article class="col-4 col-12-xsmall work-item">
@@ -81,6 +81,7 @@
 
 	</body>
 </html>
+
 
 
 
