--- a/collaborations.html
+++ b/collaborations.html
@@ -59,10 +59,36 @@
 						</div>
 					</section>
 
+				<!-- Two -->
 					<section id="two">
+						<h2>Highlights from collaborations</h2>
+						<div class="row">
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/collaborations_im/dftau-im.png" class="image fit thumb"><img src="images/collaborations_im/dftau-im.png" alt="" /></a>
+								<h3>DMOST: Disks around the MOST common stars</h3>
+								<p>I am leading the ALMA Large Program <a href="https://alma-dmost.github.io">DMOST</a> (ID:2025.1.00324.L; PI: Kurtovic, Nicolas), which aims to study the disks of young very low mass stars. We will explore the conditions for planet formation around these objects.</p>
+								<p>List of <a href="https://almascience.eso.org/alma-data/lp">ALMA Large Programs.</a> </p>
+							</article>
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/minds-logo.jpg" class="image fit thumb"><img src="images/minds-logo.jpg" alt="" /></a>
+								<h3>MINDS: MIRI mid-INfrared Disk Survey.</h3>
+								<p>As part of a guaranteed time observations program <a href="https://minds.cab.inta-csic.es">MINDS</a> (GTO:1282; PI: Henning, Thomas), we observed tens of disks with JWST/MIRI-MRS to study the emission of their inner disks. My latest work as part of MINDS was studying the emission of the binary systems. </p>
+								<p>MINDS Binaries: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250802576K/abstract">ADS</a> </p>
+							</article>
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/agepro-logo.png" class="image fit thumb"><img src="images/agepro-logo.png" alt="" /></a>
+								<h3>AGE-PRO: The ALMA Survey of Gas Evolution of PROtoplanetary Disks</h3>
+								<p>I am a member of the ALMA Large Program <a href="https://agepro.das.uchile.cl">AGE-PRO</a> (ID:2021.1.00128.L, PI: Zhang, Ke), where we explored the evolution of disk properties with a sample spanning three star forming regions. Check my paper analyzing the evolution of the dust emission. I also have a follow-up program with ALMA!</p>
+								<p>AGE-PRO dust evolution: <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...989....6K/abstract">ADS</a> </p>
+							</article>
+						</div>
+					</section>
+
+	
+<!---				<section id="two">
 						<h2>Mentoring</h2>
 						<p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
-					</section>
+					</section> -->
 
 			</div>
 
@@ -88,6 +114,7 @@
 
 	</body>
 </html>
+
 
 
 
