--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					    <li><a href="/index.html">Home</a></li>
 					    <li><a href="/ntk_CV.pdf">CV</a></li>
 					    <li><a href="/projects.html">My Publications</a></li>
+					    <li><a href="/collaborations.html">Collaborations</a></li>
 					  </ul>
 					</nav>
 				</div>
@@ -428,6 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
