--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ <!DOCTYPE HTML>
 <!--
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
@@ -36,7 +36,7 @@
 						<header class="major">
 							<h2>Research</h2>
 						</header>
-						<p>My main scientific goal is to understand the conditions for planet formation around the most common type of systems in our galaxy: Multiple stellar systes (binaries) and Very Low Mass Stars. I study these objects using ALMA, JWST, VLT, among others. </p><br />
+						<p>My main scientific goal is to understand the conditions for planet formation around the most common type of systems in our galaxy: Multiple stellar systes (binaries) and Very Low Mass Stars. I study these objects using ALMA, JWST, VLT, among others. Check my publication list in pdf in this <a href="/ntk_publications-list.pdf">link</a>. </p><br />
 <!--						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
@@ -445,6 +445,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
