--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,10 @@
 					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
 					<nav id="nav">
 					  <ul>
-					    <li><a href="/index.html">Home</a></li>
-					    <li><a href="/projects.html">My Publications</a></li>
+					    <p><a href="/index.html">Home</a><br />
+					       <a href="/ntk_CV.pdf">CV</a><br />
+						   <a href="/projects.html">My Publications</a><br />
+					       <a href="/collaborations.html">Collaborations</a></p>
 					  </ul>
 					</nav>
 				</div>
@@ -445,6 +447,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
