--- a/collaborations.html
+++ b/collaborations.html
@@ -23,9 +23,10 @@
 					<h1>Astronomer, Postdoctoral Researcher.</h1>
 					<nav id="nav">
 					  <ul>
-					    <li><a href="/index.html">Home</a></li>
-					    <li><a href="/ntk_CV.pdf">CV</a></li>
-					    <li><a href="/projects.html">My Publications</a></li>
+					    <p><a href="/index.html">Home</a><br />
+					       <a href="/ntk_CV.pdf">CV</a><br />
+						   <a href="/projects.html">My Publications</a><br />
+					       <a href="/collaborations.html">Collaborations</a></p>
 					  </ul>
 					</nav>
 				</div>
@@ -114,6 +115,7 @@
 
 	</body>
 </html>
+
 
 
 
