--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profile_pic_grey_ntk.png" alt="" /></a>
-					<h1><strong>Nicolas Kurtovic</strong> <br />
-					Postdoctoral Researcher at <a href="https://www.mpe.mpg.de/main">MPE</a>.</h1>
+					<h2><strong>Nicolas Kurtovic</strong></h2>
+					<h1>Astronomer, Postdoctoral Researcher.</h1>
 					<nav id="nav">
 					  <ul>
 					    <p><a href="/index.html">Home</a><br />
@@ -447,6 +447,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
