--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 					<h1>Astronomer, Postdoctoral Researcher.</h1>
 					<nav id="nav">
 					  <ul>
-					    <li><a href="/index.html">Home</a></li>
-					    <li><a href="/ntk_CV.pdf">CV</a></li>
-					    <li><a href="/projects.html">My Publications</a></li>
-					    <li><a href="/collaborations.html">Collaborations</a></li>
+					    <p><a href="/index.html">Home</a><br />
+					       <a href="/ntk_CV.pdf">CV</a><br />
+						   <a href="/projects.html">My Publications</a><br />
+					       <a href="/collaborations.html">Collaborations</a></p>
 					  </ul>
 					</nav>
 				</div>
@@ -429,6 +429,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
