--- a/index.html
+++ b/index.html
@@ -85,6 +85,31 @@
 						</ul>
 					</section>
 
+				<!-- Three -->
+					<section id="three">
+						<h2>Highlights from collaborations</h2>
+						<div class="row">
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/collaborations_im/gaia-binaries.png" class="image fit thumb"><img src="images/collaborations_im/gaia-binaries.png" alt="" /></a>
+								<h3>Hidden companions inside of disks with cavities</h3>
+								<p>By searching for perturbations to the Gaia astrometry, we were able to propose candidate companions for a large sample of disks with cavities. I contributed with the ALMA section of the work.</p>
+								<p>Publication: Vioque et al., incl. Kurtovic, (submitted). </p>
+							</article>
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/collaborations_im/dftau-im.png" class="image fit thumb"><img src="images/collaborations_im/dftau-im.png" alt="" /></a>
+								<h3>Rich water emission in the disk of a binary.</h3>
+								<p>As part of <a href="https://minds.cab.inta-csic.es">MINDS</a>, we studied the inner disk emission of a binary system, DF Tau. I contributed with the line emission analysis and the ALMA comparison, we even detected the binary motion with ALMA!</p>
+								<p>Publication: Grant, Kurtovic, et al., (2024), <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...689A..85G/abstract">ADS</a> </p>
+							</article>
+							<article class="col-4 col-12-xsmall work-item">
+								<a href="images/collaborations_im/pds111-im.png" class="image fit thumb"><img src="images/collaborations_im/pds111-im.png" alt="" /></a>
+								<h3>PDS 111: The disk that refuses to age</h3>
+								<p>PDS 111 is a large, massive, and flared disk, with conditions to continue forming planets. I contributed with analyzing the ALMA emission, pushing the boundaries of the angular resolution to resolve a multi-ringed structure. </p>
+								<p>Publication: Derkink et al., incl. Kurtovic, (2024): <a href="https://ui.adsabs.harvard.edu/abs/2024A%26A...688A.149D/abstract">ADS</a> </p>
+							</article>
+						</div>
+					</section>
+
 				<!-- Four -->
 <!--
 					<section id="four">
@@ -429,6 +454,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
