--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,10 @@
 							<h2>Research</h2>
 						</header>
 						<p>My main scientific goal is to understand the conditions for planet formation around the most common type of systems in our galaxy: Multiple stellar systes (binaries) and Very Low Mass Stars. I study these objects using ALMA, JWST, VLT, among others.</p>
-						<p>Check my publication list in pdf in this <a href="/ntk_publications-list.pdf">link</a>.</p>
+						<ul class="actions">
+							<li><a href="https://ui.adsabs.harvard.edu/user/libraries/umcgBfPeS8u5gVCB8oKs9w" class="button">Publication list in ADS</a></li>
+							<li><a href="/ntk_publications-list.pdf" class="button">Publication list in PDF</a></li>
+						</ul>
 <!--						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
@@ -98,9 +101,6 @@
 								<p>Publication: <a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...869L..44K/abstract">ADS</a> </p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="https://ui.adsabs.harvard.edu/user/libraries/umcgBfPeS8u5gVCB8oKs9w" class="button">Publication list in ADS</a></li>
-						</ul>
 					</section>
 
 				<!-- Four -->
@@ -448,6 +448,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
