--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
 						<p>My main scientific goal is to understand the conditions for planet formation around the most common type of systems in our galaxy: Multiple stellar systes (binaries) and Very Low Mass Stars. I study these objects using ALMA, JWST, VLT, among others.</p>
 						<ul class="actions">
 							<li><a href="https://ui.adsabs.harvard.edu/user/libraries/umcgBfPeS8u5gVCB8oKs9w" class="button">Publication list in ADS</a></li>
-							<li><a href="/ntk_publications-list.pdf" class="button">Publication list in PDF</a></li>
+							<li><a href="/ntk_publication-list.pdf" class="button">Publication list in PDF</a></li>
 						</ul>
 <!--						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -448,6 +448,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
