--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://ui.adsabs.harvard.edu/search/q=docs(library%2FumcgBfPeS8u5gVCB8oKs9w)&sort=date" class="button">Full publication list in ADS</a></li>
+							<li><a href="https://ui.adsabs.harvard.edu/user/libraries/umcgBfPeS8u5gVCB8oKs9w" class="button">Publication list in ADS</a></li>
+							<li><a href="/ntk_publication-list.pdf" class="button">Publication list in PDF</a></li>
 						</ul>
 					</section>
 
@@ -454,6 +455,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
