--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<p>I am Nicolas Kurtovic, a postdoctoral researcher at the Max Planck Institute for Astronomy (<a href="https://www.mpia.de/en">MPIA</a>). My main interest is the formation of planets around young stellar objects, especially around binaries and very low mass stars!</p>
  						<p>My favorite telescope is ALMA, which traces the cold dust and gas from where the planets are forming and growing. I am also interested in learning how to use any telescope that can help me understand the formation of planets. Check my latest works! I have been using ALMA, JWST, and many other facilities to study the most common stars in our galaxy.  </p><br />
 						<ul class="actions">
-							<li><a href="https://ui.adsabs.harvard.edu/user/libraries/umcgBfPeS8u5gVCB8oKs9w" class="button">Publication list in ADS</a></li>
+							<li><a href="https://ui.adsabs.harvard.edu/search/q=docs(library%252FumcgBfPeS8u5gVCB8oKs9w)&sort=date" class="button">Publication list in ADS</a></li>
 							<li><a href="/ntk_publication-list.pdf" class="button">Publication list in PDF</a></li>
 						</ul>
 					</section>
@@ -452,6 +452,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
